# a2

./: Cargo.toml  build.rs
src/lib/: mod.rs
src/lib/api/: mod.rs
src/lib/api/rest/: internal_user.rs  mod.rs  model_request.rs  model_response.rs  routes_register.rs  user.rs
src/lib/api/rpc/: mod.rs  user_authorization.rs
src/lib/config/: app_config.rs  config.rs  kafka_info.rs  mod.rs
src/lib/data/: database.rs  key_db.rs  mod.rs  model_database.rs  model_event.rs  model_key_db.rs  query.rs  query_key_db.rs
src/lib/domain/: claims.rs  employee.rs  login_web.rs  mod.rs  session.rs  status.rs  time.rs  user.rs  user_domain.rs
src/lib/encode_decode/proto/: user_authorization.proto
src/lib/event/: kafka_client.rs  mod.rs
src/lib/event/consumer/: internal.rs  mod.rs  retail_customer.rs  user_created.rs
src/lib/service/: mod.rs
src/lib/service/api_action/: internal_user.rs  mod.rs  user.rs
src/lib/service/event_action/: internal.rs  mod.rs  retail_customer.rs  user_created.rs
src/lib/utils/: authorized_extractor.rs  backoff.rs  db_query_result_helper.rs  hash.rs  jwt.rs  middlewares.rs  mod.rs  rand.rs  refresh_token.rs  totp.rs
