[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "auth"
path = "src/lib/mod.rs"



[dependencies]
jsonwebtoken = "8"
serde = {version = "1", features = ["derive"] }
thiserror = "1"
argon2 = "0"
rand = "0"
uuid = { version = "1", features = ["serde"]}
derive_more = "0"
time = { version = "0", features = ["macros", "local-offset"] }
scylla = "0"
actix-web = "4"
redis = { version = "0", features = ["tokio-comp"] }
rdkafka = { version = "0", features = ["cmake-build"] }
actix-rt = "2"
flexbuffers = "2"
exponential-backoff = "1"
tokio = { version = "1", features = ["rt-multi-thread","macros"] }
# tokio = { version = "1", features = ["full"] }
tonic = "0"
prost = "0"
cookie = "0"
base64 = "0"
totp-rs = { version = "5", features = ["qr"] }



[build-dependencies]
tonic-build = "0"

